@@ -18,6 +18,7 @@
     under the License.
 -->
 <components>
+
     <scr:component name="components.mutable.properties"
             xmlns:scr="http://felix.apache.org/xmlns/scr/v1.2.0-felix"
             enabled="true"
@@ -94,4 +95,37 @@
         <property name="p1" value="p1"/>
         <property name="p2" value="p2"/>
     </scr:component>
+
+   <scr:component name="components.mutable.properties.return2"
+            xmlns:scr="http://felix.apache.org/xmlns/scr/v1.2.0-felix"
+            enabled="false"
+            configuration-policy="optional"
+            activate="activateMutate"
+            modified="modifiedMutate"
+            deactivate="deactivateMutate">
+        <implementation class="org.apache.felix.scr.integration.components.MutatingServiceImpl" />
+        <service>
+            <provide interface="org.apache.felix.scr.integration.components.MutatingService" />
+        </service>
+    </scr:component>
+
+    <scr:component name="components.mutable.properties.consumer"
+            xmlns:scr="http://www.osgi.org/xmlns/scr/v1.2.0"
+            enabled="true">
+        <implementation class="org.apache.felix.scr.integration.components.MutatingServiceConsumer" />
+        <service>
+            <provide interface="org.apache.felix.scr.integration.components.MutatingServiceConsumer" />
+        </service>
+        <reference
+                name="MutatingService"
+                interface="org.apache.felix.scr.integration.components.MutatingService"
+                cardinality="0..1"
+                policy="dynamic"
+                bind="setMutatingService"
+                unbind="unsetMutatingService"
+                updated="updatedMutatingService"
+                target="(component.name=components.mutable.properties.return2)"
+                />
+    </scr:component>
+
 </components>
